# xbyak

./: .bazelrc  BUILD.bazel  WORKSPACE  readme.md
bzl/config/: BUILD.bazel  rules.bzl  variables.bzl
bzl/platform/: BUILD.bazel  rules.bzl  toolchain.bzl
bzl/tc/: BUILD.bazel  ctng_tc.BUILD  ctng_tc.bzl  linux_tc.BUILD  musl_tc.BUILD  musl_tc.bzl
bzl/tools/: user.bazelrc  user.bazelrc.template
sample/: BUILD.bazel
test/: BUILD.bazel
xbyak/: BUILD.bazel
